--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "clsx": "^2.1.0",
+    "date-fns": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
